--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,1 @@
-spring.datasource.url=jdbc:h2:mem:minticdb
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-server.port=8080
-spring.jpa.hibernate.ddl-auto=create
-spring.jpa.generate-ddl=true
+spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.rjilc.mongodb.net/tienda
