--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.data.mongodb.uri=mongodb+srv://admin:admin@cluster0.rjilc.mongodb.net/tienda
+spring.data.mongodb.uri=mongodb://localhost:27017/tienda
 server.port=8080
+
